--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,27 +1,27 @@
-@CHARSET "UTF-8";
-
-body{	
-	background: #eee;	
+body {
+	background: #eee;
 }
 
-#form{	
-	text-align: center;	
-	position: absolute;
-    top: 30%;
-    left: 43.5%;
+.container {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 340px;
+	height: 400px;
+	margin-left: -170px;
+	margin-top: -200px;
+	text-align: center;
 }
-#container{
-	width: 68%;
-}
-#submit{
-	margin-top:10px;	
-}
-#footer {
 
-position:absolute;
-bottom: 0;
-width: 100%;
-height: 60px;
-clear:both;
-text-align:center;
+#input, #inputpassword {
+	margin: 10px 0;
+}
+
+#submit {
+	margin-top: 10px;
+}
+
+.visitor {
+	display: inline-block;
+	margin-top: 20px;
 }
